# Metropolis

./: .gitignore  Dockerfile.api  Dockerfile.janitor  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_platform.sh  test_api.py
alembic/: env.py
alembic/versions/: 063aa2f2025b_initial_ai_workflow_platform.py  18a9ba45de59_add_logs_column_into_the_job_table.py  8d0f3e88d06e_add_retry_count_to_jobs_table.py  d08e932e4dd4_.py  da1950dc39c6_add_retry_count_to_jobs_table.py
monitoring/prometheus/: prometheus.yml
monitoring/redis_exporter/: get-metrics.lua
nginx/: nginx.conf
prometheus-multiproc-dir/: counter_1.db  gauge_all_1.db  gauge_all_13.db
src/metropolis/: advanced_monitoring.py  ai_schemas.py  ai_tools_marketplace.py  ai_workflow_engine.py  broker.py  crud.py  dashboard.py  database.py  enhanced_api.py  janitor.py  log_config.py  lua_scripts.py  main.py  metrics.py  models.py  schemas.py  settings.py  validation.py  worker.py
templates/: dashboard.html  workflows.html
