[project]
name = "metropolis"
version = "0.1.0"
description = "AI Workflow Orchestration Platform"
authors = [
    {name = "Raj0408",email = "rajkaneriya48@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    # Core Framework
    "fastapi>=0.115.14,<0.116.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    
    # Database
    "sqlalchemy>=2.0.41,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    
    # Redis & Caching
    "redis>=6.2.0,<7.0.0",
    
    # HTTP & Networking
    "httpx>=0.27.0,<1.0.0",
    "aiohttp>=3.9.5,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    
    # Monitoring & Metrics
    "prometheus-client>=0.20.0,<1.0.0",
    "psutil>=5.9.8,<6.0.0",
    
    # Data Processing (Python 3.10 compatible versions)
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    
    # AI & ML Libraries
    "openai>=1.30.1,<2.0.0",
    "transformers>=4.40.2,<5.0.0",
    "huggingface-hub>=0.24.0,<1.0.0",
    
    # Web & Templates
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    
    # Utilities
    "python-json-logger>=3.3.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "click>=8.2.0,<9.0.0",
    "colorama>=0.4.0,<1.0.0",
    
    # Async & Concurrency
    "anyio>=4.0.0,<5.0.0",
    "async-timeout>=5.0.0,<6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# Development & Testing
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"